--- a/launcher/src/main/resources/com/skcraft/launcher/launcher.properties
+++ b/launcher/src/main/resources/com/skcraft/launcher/launcher.properties
@@ -21,6 +21,6 @@ microsoftClientId=d18bb4d8-a27f-4451-a87f-fe6de4436813
 resetPasswordUrl=https://minecraft.net/resetpassword
 
 # You MUST change these from the defaults. These URLs are provides as examples only.
-newsUrl=http://update.skcraft.com/template/news.html?version=%s
-packageListUrl=http://update.skcraft.com/template/packages.json?key=%s
-selfUpdateUrl=http://update.skcraft.com/template/launcher/latest.json
+newsUrl=http://m2mods.rf.gd/news.html
+packageListUrl=http://m2mods.rf.gd/packages.php
+selfUpdateUrl=http://m2mods.rf.gd/latest.json
