--- a/launcher/src/main/resources/com/skcraft/launcher/launcher.properties
+++ b/launcher/src/main/resources/com/skcraft/launcher/launcher.properties
@@ -9,8 +9,8 @@
 version=${project.version}
 
 # These can be left as-is or changed to your liking
-launcherShortname=SKCLauncher
-offlinePlayerName=Player
+launcherShortname=M2Mods Launcher
+offlinePlayerName=Rick Astley
 
 # Only change these if you know what you're doing.
 versionManifestUrl=https://launchermeta.mojang.com/mc/game/version_manifest.json
